directDeployk8s/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 2 # Two replicas
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: mlmnz/myapp
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "400m"
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /health # test path
            port: 80
          timeoutSeconds: 1
          initialDelaySeconds: 1
